# segfault-revmc-repro

./: Cargo.toml  build.rs
src/: common.rs  lib.rs  main.rs
