[package]
name = "repro"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
revmc = { git = "https://github.com/paradigmxyz/revmc.git", features = ["llvm-prefer-dynamic"], branch = "dani/unaligned-mem-ops" }
revmc-build = { git = "https://github.com/paradigmxyz/revmc.git", branch = "dani/unaligned-mem-ops" }
cc = "1.2"
alloy = "0.7"

[dependencies]
revmc-builtins = { git = "https://github.com/paradigmxyz/revmc.git", branch = "dani/unaligned-mem-ops", default-features = false }
revmc-context = { git = "https://github.com/paradigmxyz/revmc.git", branch = "dani/unaligned-mem-ops",  default-features = false }
revm = { version = "18.0", features = ["serde"] }
alloy = { version = "0.7", features = [
    "contract",
    "network",
    "providers",
    "provider-ipc",
    "json-rpc",
    "signer-local",
    "rpc-client",
    "rpc-client-ipc",
    "rpc-types",
    "rpc-types-eth",
    "rpc-types-trace",
] }
foundry-fork-db = { git = "https://github.com/foundry-rs/foundry-fork-db.git" }
eyre = "0.6.12"
lazy_static = "1.5"
